# Chatbot

./: .gitignore  README.md  pyproject.toml
.chainlit/translations/: bn.json
src/first_chatbot/: __init__.py  agent.py  hello.py
src/first_chatbot/.chainlit/: config.toml
src/first_chatbot/.chainlit/translations/: bn.json
